--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<body>
     <div id="area"></div>
   <script src="jquery.js"></script>
-	<script src="ui.js"></script>
+  <script src="game.js"></script>
 	</body>
 </html>
